--- a/src/de/andreasgiemza/mangadownloader/gui/panels/Loading.form
+++ b/src/de/andreasgiemza/mangadownloader/gui/panels/Loading.form
@@ -2,8 +2,9 @@
 
 <Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JDialogFormInfo">
   <Properties>
-    <Property name="defaultCloseOperation" type="int" value="2"/>
-    <Property name="title" type="java.lang.String" value="Loading ..."/>
+    <Property name="defaultCloseOperation" type="int" value="0"/>
+    <Property name="title" type="java.lang.String" value="Loading"/>
+    <Property name="undecorated" type="boolean" value="true"/>
     <Property name="resizable" type="boolean" value="false"/>
   </Properties>
   <SyntheticProperties>
@@ -30,6 +31,9 @@
   <SubComponents>
     <Component class="javax.swing.JLabel" name="loadingImage">
       <Properties>
+        <Property name="background" type="java.awt.Color" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+          <Connection code="new Color(0, 0, 0, 0)" type="code"/>
+        </Property>
         <Property name="horizontalAlignment" type="int" value="0"/>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
           <Connection code="new ImageIcon(getClass().getClassLoader().getResource(&quot;de/andreasgiemza/mangadownloader/gui/icons/loading.gif&quot;))" type="code"/>
