--- a/src/de/andreasgiemza/mangadownloader/MangaDownloader.form
+++ b/src/de/andreasgiemza/mangadownloader/MangaDownloader.form
@@ -38,7 +38,7 @@
           <Group type="102" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="sourcePanel" max="32767" attributes="0"/>
+                  <Component id="sitePanel" max="32767" attributes="0"/>
                   <Component id="MangaChapterPanel" alignment="1" max="32767" attributes="0"/>
                   <Component id="downloadButton" alignment="0" max="32767" attributes="0"/>
                   <Component id="mangasDirPanel" alignment="0" max="32767" attributes="0"/>
@@ -53,7 +53,7 @@
               <EmptySpace max="-2" attributes="0"/>
               <Component id="mangasDirPanel" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="sourcePanel" min="-2" max="-2" attributes="0"/>
+              <Component id="sitePanel" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="MangaChapterPanel" max="32767" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
@@ -108,11 +108,11 @@
         </Component>
       </SubComponents>
     </Container>
-    <Container class="javax.swing.JPanel" name="sourcePanel">
+    <Container class="javax.swing.JPanel" name="sitePanel">
       <Properties>
         <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
           <Border info="org.netbeans.modules.form.compat2.border.TitledBorderInfo">
-            <TitledBorder title="Source"/>
+            <TitledBorder title="Site"/>
           </Border>
         </Property>
       </Properties>
@@ -121,36 +121,34 @@
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="1" attributes="0">
-                  <Component id="sourceComboBox" max="32767" attributes="0"/>
+                  <Component id="selectedSiteLabel" max="32767" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
-                  <Component id="sourceButton" min="-2" pref="90" max="-2" attributes="0"/>
+                  <Component id="selectSiteButton" min="-2" pref="90" max="-2" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
         <DimensionLayout dim="1">
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="sourceButton" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="sourceComboBox" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="selectSiteButton" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="selectedSiteLabel" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
       </Layout>
       <SubComponents>
-        <Component class="javax.swing.JComboBox" name="sourceComboBox">
+        <Component class="javax.swing.JTextField" name="selectedSiteLabel">
           <Properties>
-            <Property name="maximumRowCount" type="int" value="25"/>
-            <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="0"/>
-            </Property>
+            <Property name="editable" type="boolean" value="false"/>
+            <Property name="text" type="java.lang.String" value="No site selected"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JButton" name="sourceButton">
+        <Component class="javax.swing.JButton" name="selectSiteButton">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Update"/>
+            <Property name="text" type="java.lang.String" value="Select site"/>
           </Properties>
           <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="sourceButtonActionPerformed"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="selectSiteButtonActionPerformed"/>
           </Events>
         </Component>
       </SubComponents>
